auto add publisher when add news
